<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">preco</string>
    <string name="preco_por_litro">preco por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="gasto_total">Gasto total</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total sera de:</string>
    <string name="r_0">R$ 0</string>
    <string name="calcular">Calcular</string>

    <string name="validation_fill_all_fields">Preencha todos os campos!</string>
</resources>